force-app/src/objects/TR1__Availability_Period__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Closing_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closing Report</label>
        <referenceTo>TR1__Closing_Report__c</referenceTo>
        <relationshipLabel>Availability Periods</relationshipLabel>
        <relationshipName>Availability_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Availability Periods</relationshipLabel>
        <relationshipName>Availability_Periods</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Selected_Days__c</fullName>
        <label>Selected Days</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unavailable</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Working for Another Agency</fullName>
                </value>
                <value>
                    <fullName>Sick</fullName>
                </value>
                <value>
                    <fullName>Holiday</fullName>
                </value>
                <value>
                    <fullName>Available</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>In a Meeting</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Justified</fullName>
                </value>
                <value>
                    <fullName>Unjustified</fullName>
                </value>
                <value>
                    <fullName>Personal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Availability Period</label>
    <nameField>
        <displayFormat>AP-{00000}</displayFormat>
        <label>Availability Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability Periods</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>TR1__Closing_Report_Cannot_Be_Changed</fullName>
        <active>true</active>
        <description>Closing Report field value can&apos;t be changed</description>
        <errorConditionFormula>ISCHANGED(TR1__Closing_Report__c)</errorConditionFormula>
        <errorDisplayField>TR1__Closing_Report__c</errorDisplayField>
        <errorMessage>Closing Report field value can&apos;t be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TR1__End_Date_cannot_be_before_Start_Date</fullName>
        <active>true</active>
        <description>End Date cannot be earlier than Start Date</description>
        <errorConditionFormula>TR1__End_Date__c &lt; TR1__Start_Date__c</errorConditionFormula>
        <errorMessage>End Date cannot be earlier than Start Date</errorMessage>
    </validationRules>
</CustomObject>